--- a/Web/SignUp.html
+++ b/Web/SignUp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="SignUp.css">
+  <link rel="stylesheet" href="CSS/SignUp.css">
 </head>
 <body>
 
