--- a/Web/SignUp/SignUp.html
+++ b/Web/SignUp/SignUp.html
@@ -40,10 +40,10 @@
 </form></div>
                         <div style="height: 45px;background: rgba(200,200,200,0);border-radius: 45px;border: 2.4px solid #46c2ff;margin-bottom: 10px;margin-top: 10px;"><i class="fa fa-envelope" style="margin-left: 16px;color: rgb(147,78,251);"></i><input type="text" style="padding: 0px;margin-top: 4px;margin-left: 15px;width: 182px;background: rgba(255,255,255,0);border-color: rgba(0,0,0,0);text-align: left;color: #707070;" placeholder="Enter Your Email Address" required="" inputmode="email"></div>
                         <div style="height: 45px;background: rgba(200,200,200,0);border-radius: 45px;border: 2.4px solid #46c2ff;margin-bottom: 10px;"><i class="fa fa-lock" style="margin-left: 16px;color: #9a46fc;width: 11px;"></i><input type="password" style="margin-top: 5px;width: 155px;color: rgb(112,112,112);background: rgba(255,255,255,0);border-color: rgba(112,112,112,0);margin-left: 19px;" placeholder="Password" required=""></div>
-                        <div style="text-align: center;"><button class="btn btn-primary d-table-row" type="button" style="width: 120px;border-radius: 45px;background: linear-gradient(28deg, #BD11FA, #46C2FF);border-width: 0px;box-shadow: -1px 1px 20px 8px var(--purple);margin-top: 18px;">Button</button></div>
+                        <div style="text-align: center;"><button class="btn btn-primary d-table-row" type="button" style="width: 120px;border-radius: 45px;background: linear-gradient(28deg, #BD11FA, #46C2FF);border-width: 0px;box-shadow: -1px 1px 20px 8px var(--purple);margin-top: 18px;">Sign Up</button></div>
                         <div style="margin-top: 22px;text-align: center;">
                             <p class="d-inline" style="color: rgb(255,255,255);">Already Have An account?&nbsp;</p>
-                            <p class="d-inline" style="color: rgb(72,203,255);text-shadow: 0px 0px 9px;font-weight: bold;font-style: italic;border-style: none;border-bottom-style: solid;">Sign In</p>
+                            <a class="d-inline" style="color: rgb(72,203,255);text-shadow: 0px 0px 9px;font-weight: bold;font-style: italic;border-style: none;border-bottom-style: solid;"  href="../SignIn/SignIn.html>Sign In</a>
                         </div>
                     </div>
                 </div>
