--- a/Web/SignUp/SignUp.html
+++ b/Web/SignUp/SignUp.html
@@ -43,7 +43,7 @@
                         <div style="text-align: center;"><button class="btn btn-primary d-table-row" type="button" style="width: 120px;border-radius: 45px;background: linear-gradient(28deg, #BD11FA, #46C2FF);border-width: 0px;box-shadow: -1px 1px 20px 8px var(--purple);margin-top: 18px;">Sign Up</button></div>
                         <div style="margin-top: 22px;text-align: center;">
                             <p class="d-inline" style="color: rgb(255,255,255);">Already Have An account?&nbsp;</p>
-                            <a class="d-inline" style="color: rgb(72,203,255);text-shadow: 0px 0px 9px;font-weight: bold;font-style: italic;border-style: none;border-bottom-style: solid;"  href="../SignIn/SignIn.html>Sign In</a>
+                            <a class="d-inline" style="color: rgb(72,203,255);text-shadow: 0px 0px 9px;font-weight: bold;font-style: italic;border-style: none;border-bottom-style: solid;"  href="../SignIn/SignIn.html">Sign In</a>
                         </div>
                     </div>
                 </div>
