--- a/Web/AddFilm.html
+++ b/Web/AddFilm.html
@@ -58,7 +58,7 @@
 
           <div class="row ">
             <div class="col-12 col-lg-4 form-group">
-                <select class="form-select" aria-label="Default select example">
+                <select class="form-select form-control" aria-label="Default select example">
                     <option selected>Language</option>
                     <option value="1">One</option>
                     <option value="2">Two</option>
@@ -66,7 +66,7 @@
                   </select>
             </div>
             <div class="col-12 col-lg-4 form-group">
-                <select class="form-select" aria-label="Default select example">
+                <select class="form-select form-control" aria-label="Default select example">
                     <option selected>Director</option>
                     <option value="1">One</option>
                     <option value="2">Two</option>
@@ -74,7 +74,7 @@
                   </select>
             </div>
             <div class="col-12 col-lg-4 form-group ">
-                <select class="form-select" aria-label="Default select example">
+                <select class="form-select form-control" aria-label="Default select example">
                     <option selected>If the Film has story chose it</option>
                     <option value="1">One</option>
                     <option value="2">Two</option>
@@ -87,19 +87,19 @@
             <div class="col-12 col-lg-4 form-group">
                 <div class="row">
                     <div class="col-9">
-                <select class="form-select " aria-label="Default select example" id="A1">
+                <select class="form-select form-control" aria-label="Default select example" id="A1">
                     <option selected>Actor</option> 
                     <option value="1">One</option>
                     <option value="2">Two</option>
                     <option value="3">Three</option>
                 </select>
-                <select class="form-select " aria-label="Default select example" id="A2"  style="display: none;">
+                <select class="form-select form-control" aria-label="Default select example" id="A2"  style="display: none;">
                     <option selected>Actor</option> 
                     <option value="1">One</option>
                     <option value="2">Two</option>
                     <option value="3">Three</option>
                 </select>
-                <select class="form-select " aria-label="Default select example" id="A3" style="display: none;">
+                <select class="form-select form-control" aria-label="Default select example" id="A3" style="display: none;">
                     <option selected>Actor</option> 
                     <option value="1">One</option>
                     <option value="2">Two</option>
@@ -115,19 +115,19 @@
             <div class="col-12 col-lg-4 form-group">
                 <div class="row">
                     <div class="col-9">
-                <select class="form-select " aria-label="Default select example" id="G1" >
+                <select class="form-select form-control" aria-label="Default select example" id="G1" >
                     <option selected>Genre</option> 
                     <option value="1">One</option>
                     <option value="2">Two</option>
                     <option value="3">Three</option>
                 </select>
-                <select class="form-select " aria-label="Default select example" id="G2" style="display: none;">
+                <select class="form-select form-control" aria-label="Default select example" id="G2" style="display: none;">
                     <option selected>Genre</option> 
                     <option value="1">One</option>
                     <option value="2">Two</option>
                     <option value="3">Three</option>
                 </select>
-                <select class="form-select " aria-label="Default select example" id="G3" style="display: none;">
+                <select class="form-select form-control" aria-label="Default select example" id="G3" style="display: none;">
                     <option selected>Genre</option> 
                     <option value="1">One</option>
                     <option value="2">Two</option>
@@ -144,19 +144,19 @@
 
                 <div class="row">
                     <div class="col-9">
-                <select class="form-select " aria-label="Default select example" id="P1">
+                <select class="form-select form-control" aria-label="Default select example" id="P1">
                     <option selected>Production Company</option> 
                     <option value="1">One</option>
                     <option value="2">Two</option>
                     <option value="3">Three</option>
                 </select>
-                <select class="form-select " aria-label="Default select example" id="P2" style="display: none;" >
+                <select class="form-select form-control" aria-label="Default select example" id="P2" style="display: none;" >
                     <option selected>Production Company</option> 
                     <option value="1">One</option>
                     <option value="2">Two</option>
                     <option value="3">Three</option>
                 </select>
-                <select class="form-select " aria-label="Default select example" id="P3" style="display: none;" >
+                <select class="form-select form-control" aria-label="Default select example" id="P3" style="display: none;" >
                     <option selected>Production Company</option> 
                     <option value="1">One</option>
                     <option value="2">Two</option>
