--- a/Web/SignUp/SignUp.html
+++ b/Web/SignUp/SignUp.html
@@ -28,23 +28,45 @@
                         <div>
                             <h1 style="color: rgb(255,255,255);text-align: center;margin-bottom: 24px;">Sign Up</h1>
                         </div>
+
+                        <form action="aa.php" method="Post">
+
                         <div>
-                            <div style="height: 45px;background: rgba(200,200,200,0);border-radius: 45px;border: 2.4px solid #46c2ff;margin-bottom: 10px;"><input type="text" style="padding: 0px;margin-top: 4px;margin-left: 26px;width: 240px;background: rgba(255,255,255,0);border-color: rgba(0,0,0,0);text-align: left;color: #707070;" placeholder="Enter A valid User Name" required=""></div>
+                            <div style="height: 45px;background: rgba(200,200,200,0);border-radius: 45px;border: 2.4px solid #46c2ff;margin-bottom: 10px;">
+                                <input type="text" style="padding: 0px;margin-top: 4px;margin-left: 26px;width: 240px;background: rgba(255,255,255,0);border-color: rgba(0,0,0,0);text-align: left;color: #707070;" placeholder="Enter A valid User Name" required="" name="username"></div>
                         </div>
                         <div>
-                            <div style="height: 45px;background: rgba(200,200,200,0);border-radius: 45px;border: 2.4px solid #46c2ff;margin-bottom: 10px;"><input type="number" style="margin-top: 5px;margin-left: 29px;width: 240px;background: rgba(255,255,255,0);border-color: rgba(0,0,0,0);color: #707070;" placeholder="Enter Your Age" min="0" max="200" required=""></div>
+                            <div style="height: 45px;background: rgba(200,200,200,0);border-radius: 45px;border: 2.4px solid #46c2ff;margin-bottom: 10px;">
+                                <input type="number" style="margin-top: 5px;margin-left: 29px;width: 240px;background: rgba(255,255,255,0);border-color: rgba(0,0,0,0);color: #707070;" placeholder="Enter Your Age" min="0" max="200" required=""name="age"></div>
                         </div>
-                        <div class="text-center"><form class="d-inline-flex">
-    <div class="form-check d-lg-flex"><input type="radio" class="form-check-input" id="formCheck-1" style="margin-top: 6px;" name="gender" /><label class="form-check-label" for="formCheck-1" style="color: rgb(152,73,252);margin-bottom: 0px;padding: 0px;margin-left: 5px;">Male</label></div>
-    <div class="form-check d-lg-flex" style="margin-left: 27px;"><input type="radio" class="form-check-input" id="formCheck-2" style="margin-top: 6px;filter: brightness(127%) saturate(124%) sepia(0%);"  name="gender" /><label class="form-check-label" for="formCheck-1" style="color: rgb(154,69,252);margin-bottom: 0px;padding: 0px;margin-left: 5px;">Female</label></div>
-</form></div>
-                        <div style="height: 45px;background: rgba(200,200,200,0);border-radius: 45px;border: 2.4px solid #46c2ff;margin-bottom: 10px;margin-top: 10px;"><i class="fa fa-envelope" style="margin-left: 16px;color: rgb(147,78,251);"></i><input type="text" style="padding: 0px;margin-top: 4px;margin-left: 15px;width: 182px;background: rgba(255,255,255,0);border-color: rgba(0,0,0,0);text-align: left;color: #707070;" placeholder="Enter Your Email Address" required="" inputmode="email"></div>
-                        <div style="height: 45px;background: rgba(200,200,200,0);border-radius: 45px;border: 2.4px solid #46c2ff;margin-bottom: 10px;"><i class="fa fa-lock" style="margin-left: 16px;color: #9a46fc;width: 11px;"></i><input type="password" style="margin-top: 5px;width: 155px;color: rgb(112,112,112);background: rgba(255,255,255,0);border-color: rgba(112,112,112,0);margin-left: 19px;" placeholder="Password" required=""></div>
-                        <div style="text-align: center;"><button class="btn btn-primary d-table-row" type="button" style="width: 120px;border-radius: 45px;background: linear-gradient(28deg, #BD11FA, #46C2FF);border-width: 0px;box-shadow: -1px 1px 20px 8px var(--purple);margin-top: 18px;">Sign Up</button></div>
+                        <div class="text-center">
+
+
+
+                            
+                            <div class="d-inline-flex">
+                           <div class="form-check d-lg-flex">
+        
+        <!-- hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh -->
+
+                            <input type="radio" class="form-check-input" id="formCheck-1" style="margin-top: 6px;" name="gender" /><label class="form-check-label" for="formCheck-1" style="color: rgb(152,73,252);margin-bottom: 0px;padding: 0px;margin-left: 5px;" value="M">Male</label></div>
+
+
+                             <div class="form-check d-lg-flex" style="margin-left: 27px;"><input type="radio" class="form-check-input" id="formCheck-2" style="margin-top: 6px;filter: brightness(127%) saturate(124%) sepia(0%);"  name="gender" /><label class="form-check-label" for="formCheck-1" style="color: rgb(154,69,252);margin-bottom: 0px;padding: 0px;margin-left: 5px;" value="F">Female</label></div>
+                            </div>
+                          </div>
+                        <div style="height: 45px;background: rgba(200,200,200,0);border-radius: 45px;border: 2.4px solid #46c2ff;margin-bottom: 10px;margin-top: 10px;"><i class="fa fa-envelope" style="margin-left: 16px;color: rgb(147,78,251);"></i>
+                            <input type="text" style="padding: 0px;margin-top: 4px;margin-left: 15px;width: 182px;background: rgba(255,255,255,0);border-color: rgba(0,0,0,0);text-align: left;color: #707070;" placeholder="Enter Your Email Address" required="" inputmode="email" name="email"></div>
+                        <div style="height: 45px;background: rgba(200,200,200,0);border-radius: 45px;border: 2.4px solid #46c2ff;margin-bottom: 10px;"><i class="fa fa-lock" style="margin-left: 16px;color: #9a46fc;width: 11px;"></i><input type="password" style="margin-top: 5px;width: 155px;color: rgb(112,112,112);background: rgba(255,255,255,0);border-color: rgba(112,112,112,0);margin-left: 19px;" placeholder="Password" required=""name="password"></div>
+                        <div style="text-align: center;">
+
+                            <button class="btn btn-primary d-table-row" type="submit"name="signup" style="width: 120px;border-radius: 45px;background: linear-gradient(28deg, #BD11FA, #46C2FF);border-width: 0px;box-shadow: -1px 1px 20px 8px var(--purple);margin-top: 18px;">Sign Up</button></div>
+
                         <div style="margin-top: 22px;text-align: center;">
                             <p class="d-inline" style="color: rgb(255,255,255);">Already Have An account?&nbsp;</p>
                             <a class="d-inline" style="color: rgb(72,203,255);text-shadow: 0px 0px 9px;font-weight: bold;font-style: italic;border-style: none;border-bottom-style: solid;"  href="../SignIn/SignIn.html">Sign In</a>
                         </div>
+                        </form>>
                     </div>
                 </div>
             </div>
@@ -55,3 +77,4 @@
 </body>
 
 </html>
+
