--- a/Web/SignUp/SignUp.html
+++ b/Web/SignUp/SignUp.html
@@ -49,10 +49,14 @@
         
         <!-- hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh -->
 
-                            <input type="radio" class="form-check-input" id="formCheck-1" style="margin-top: 6px;" name="gender" /><label class="form-check-label" for="formCheck-1" style="color: rgb(152,73,252);margin-bottom: 0px;padding: 0px;margin-left: 5px;" value="M">Male</label></div>
+                            <input type="radio" class="form-check-input" id="formCheck-1" style="margin-top: 6px;" name="gender" value="M" />
+                            <label class="form-check-label" for="formCheck-1" style="color: rgb(152,73,252);margin-bottom: 0px;padding: 0px;margin-left: 5px;" >Male</label>
+                        </div>
 
 
-                             <div class="form-check d-lg-flex" style="margin-left: 27px;"><input type="radio" class="form-check-input" id="formCheck-2" style="margin-top: 6px;filter: brightness(127%) saturate(124%) sepia(0%);"  name="gender" /><label class="form-check-label" for="formCheck-1" style="color: rgb(154,69,252);margin-bottom: 0px;padding: 0px;margin-left: 5px;" value="F">Female</label></div>
+                             <div class="form-check d-lg-flex" style="margin-left: 27px;">
+                                <input type="radio" class="form-check-input" id="formCheck-2" style="margin-top: 6px;filter: brightness(127%) saturate(124%) sepia(0%);"  name="gender" value="F"/>
+                                <label class="form-check-label" for="formCheck-1" style="color: rgb(154,69,252);margin-bottom: 0px;padding: 0px;margin-left: 5px;" >Female</label></div>
                             </div>
                           </div>
                         <div style="height: 45px;background: rgba(200,200,200,0);border-radius: 45px;border: 2.4px solid #46c2ff;margin-bottom: 10px;margin-top: 10px;"><i class="fa fa-envelope" style="margin-left: 16px;color: rgb(147,78,251);"></i>
