--- a/Web/SignUp/SignUp.html
+++ b/Web/SignUp/SignUp.html
@@ -29,7 +29,7 @@
                             <h1 style="color: rgb(255,255,255);text-align: center;margin-bottom: 24px;">Sign Up</h1>
                         </div>
 
-                        <form action="aa.php" method="Post">
+                        <form action="sign_up_call_query.php" method="Post">
 
                         <div>
                             <div style="height: 45px;background: rgba(200,200,200,0);border-radius: 45px;border: 2.4px solid #46c2ff;margin-bottom: 10px;">
