--- a/Web/SignIn/SignIn.html
+++ b/Web/SignIn/SignIn.html
@@ -21,8 +21,9 @@
                             <p style="font-size: 15px;letter-spacing: 2px;font-style: italic;margin-left: 12px;">Find the latest and greatest Movies, Series,&nbsp; Novels that fit your taste&nbsp;</p>
                         </div>
                     </div>
-                    <form action="sign_in_query.php" method="Post"></form>
+                    <form action="sign_in_query.php" method="Post">
                 </div>
+               
                 <div class="col-md-6">
                     <div>
                         <div style="text-align: center;"><img class="img-fluid" src="assets/img/Untitled%20design.png" style="width: 130px;"></div>
@@ -38,6 +39,7 @@
                         </div>
                     </div>
                 </div>
+                </form>
             </div>
         </div>
     </div>
