--- a/Web/admin/admin.html
+++ b/Web/admin/admin.html
@@ -118,11 +118,11 @@
             </div>
         </div>
     </div>
-    <footer class="bg-white sticky-footer" style="background: linear-gradient(118deg, rgb(154,59,128) 22%, rgb(154,59,128) 78%), var(--purple);margin: 20px;">
+    <!-- <footer class="bg-white sticky-footer" style="background: linear-gradient(118deg, rgb(154,59,128) 22%, rgb(154,59,128) 78%), var(--purple);margin: 20px;">
         <div class="container my-auto">
             <div class="text-center my-auto copyright"><span style="background: rgba(33,30,30,0);color: rgb(0,0,0);">Copyright CMP 2023</span></div>
         </div>
-    </footer>
+    </footer> -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
