--- a/Web/user/index.html
+++ b/Web/user/index.html
@@ -70,9 +70,9 @@
     <footer id="footer" style="background: #994ebc;">
         <div class="row">
             <div class="col-sm-6 col-md-4 footer-navigation">
-                <h3><a href="#" style="font-size: 37px;font-family: Cookie, cursive;">NOT&nbsp;&nbsp;<span style="color: rgb(97,154,254);">flex</span></a></h3>
+                <h3><a href="#" style="font-size: 37px;font-family: Cookie, cursive;">NOT&nbsp;&nbsp;<span style="color: rgb(97,154,254);">flix</span></a></h3>
                 <p class="links"><a href="#">Home</a><strong> · </strong><a href="#">Blog</a><strong> · </strong><a href="#">Pricing</a><strong> · </strong><a href="#">About</a><strong> · </strong><a href="#">Faq</a><strong> · </strong><a href="#">Contact</a></p>
-                <p class="company-name">CMP © 2023</p>
+                <p class="company-name" style="color: rgb(29,31,33);">CMP © 2023</p>
             </div>
             <div class="col-sm-6 col-md-4 footer-contacts">
                 <div class="d-lg-flex justify-content-lg-end align-items-lg-end"><img class="d-lg-flex" src="assets/img/icons8-address-64.png">
@@ -89,7 +89,7 @@
             <div class="clearfix"></div>
             <div class="col-md-4 footer-about">
                 <h4>About the Team</h4>
-                <p>&nbsp;2nd year grade students in CMP department main stream in faculty of engineering cairo university</p>
+                <p style="border-color: rgb(0,0,0);color: rgb(29,31,33);">&nbsp;2nd year grade students in CMP department main stream in faculty of engineering cairo university</p>
                 <div class="d-flex justify-content-center social-links social-icons"><a href="#"><img src="assets/img/icons8-facebook-64.png" style="width: 36px;"></a><a href="#"><img src="assets/img/icons8-twitter-64.png" style="width: 36px;"></a><a href="#"><img src="assets/img/icons8-linkedin-64.png" style="width: 36px;"></a><a href="#"><img src="assets/img/icons8-github-64.png" style="width: 36px;"></a></div>
             </div>
         </div>
