--- a/Web/AddCompany/AddCompany.html
+++ b/Web/AddCompany/AddCompany.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-light "  >
         <div class="navbar-brand"  >
           
-            <img src="https://img.icons8.com/nolan/50/company.png"/>
+            <img src="https://img.icons8.com/nolan/50/company.png" style="size: fill;" />
         
         </div>
         <div class="head">
