--- a/Web/SignUp/SignUp.html
+++ b/Web/SignUp/SignUp.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="icon" href="../images/logo.png">
 </head>
 
 <body class="d-lg-flex justify-content-lg-center align-items-lg-center" style="background: url(&quot;assets/img/group_38.png&quot;) no-repeat, #21212e;background-size: contain, auto;">
